; ModuleID = '/home/carl/AnghaBench/freebsd/sys/gnu/dev/bwn/phy_n/extr_if_bwn_phy_n_core.c_bwn_nphy_op_switch_channel.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/gnu/dev/bwn/phy_n/extr_if_bwn_phy_n_core.c_bwn_nphy_op_switch_channel.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bwn_mac = type { i32 }
%struct.ieee80211_channel = type { i32 }

@BWN_BAND_2G = common dso_local global i64 0, align 8
@EINVAL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @bwn_nphy_op_switch_channel(%struct.bwn_mac* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.bwn_mac*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.ieee80211_channel*, align 8
  %7 = alloca i32, align 4
  store %struct.bwn_mac* %0, %struct.bwn_mac** %4, align 8
  store i32 %1, i32* %5, align 4
  %8 = load %struct.bwn_mac*, %struct.bwn_mac** %4, align 8
  %9 = call %struct.ieee80211_channel* @bwn_get_channel(%struct.bwn_mac* %8)
  store %struct.ieee80211_channel* %9, %struct.ieee80211_channel** %6, align 8
  %10 = load %struct.bwn_mac*, %struct.bwn_mac** %4, align 8
  %11 = call i32 @bwn_get_chan_type(%struct.bwn_mac* %10, i32* null)
  store i32 %11, i32* %7, align 4
  %12 = load %struct.bwn_mac*, %struct.bwn_mac** %4, align 8
  %13 = call i64 @bwn_current_band(%struct.bwn_mac* %12)
  %14 = load i64, i64* @BWN_BAND_2G, align 8
  %15 = icmp eq i64 %13, %14
  br i1 %15, label %16, label %26

16:                                               ; preds = %2
  %17 = load i32, i32* %5, align 4
  %18 = icmp ult i32 %17, 1
  br i1 %18, label %22, label %19

19:                                               ; preds = %16
  %20 = load i32, i32* %5, align 4
  %21 = icmp ugt i32 %20, 14
  br i1 %21, label %22, label %25

22:                                               ; preds = %19, %16
  %23 = load i32, i32* @EINVAL, align 4
  %24 = sub nsw i32 0, %23
  store i32 %24, i32* %3, align 4
  br label %38

25:                                               ; preds = %19
  br label %33

26:                                               ; preds = %2
  %27 = load i32, i32* %5, align 4
  %28 = icmp ugt i32 %27, 200
  br i1 %28, label %29, label %32

29:                                               ; preds = %26
  %30 = load i32, i32* @EINVAL, align 4
  %31 = sub nsw i32 0, %30
  store i32 %31, i32* %3, align 4
  br label %38

32:                                               ; preds = %26
  br label %33

33:                                               ; preds = %32, %25
  %34 = load %struct.bwn_mac*, %struct.bwn_mac** %4, align 8
  %35 = load %struct.ieee80211_channel*, %struct.ieee80211_channel** %6, align 8
  %36 = load i32, i32* %7, align 4
  %37 = call i32 @bwn_nphy_set_channel(%struct.bwn_mac* %34, %struct.ieee80211_channel* %35, i32 %36)
  store i32 %37, i32* %3, align 4
  br label %38

38:                                               ; preds = %33, %29, %22
  %39 = load i32, i32* %3, align 4
  ret i32 %39
}

declare dso_local %struct.ieee80211_channel* @bwn_get_channel(%struct.bwn_mac*) #1

declare dso_local i32 @bwn_get_chan_type(%struct.bwn_mac*, i32*) #1

declare dso_local i64 @bwn_current_band(%struct.bwn_mac*) #1

declare dso_local i32 @bwn_nphy_set_channel(%struct.bwn_mac*, %struct.ieee80211_channel*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
